[package]
name = "gush"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "GaphSync data transfer protocol over HTTP"
repository = "https://github.com/retrieval-markets-lab/gush"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
asynchronous-codec = "0.6.1"
unsigned-varint = { version = "0.7.0", features = ["asynchronous_codec"] }
ipld_traversal = { version = "0.2.2" }
hyper = { version = "1.0.0-rc.1", features = ["full"] }
http-body-util = { version = "0.1.0-rc.1" }
serde_ipld_dagcbor = "0.1.2"
serde_bytes = { package = "cs_serde_bytes", version = "0.12" }
serde_tuple = "0.5"
serde = { version = "1.0", features = ["derive"] }
libipld = { version = "0.15.0", features = ["serde-codec"] }
bytes = "1.3.0"
futures = "0.3.21"
pin-project-lite = "0.2.9"
par-stream = { version = "0.10.2", features = ["runtime-tokio"]}

[dev-dependencies]
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread",  "io-std"] }
rand = "0.8.5"

[[bench]]
name = "throughput"
path = "benches/throughput.rs"


